--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Hamdan Alkhoori</title>
+    <title>Ivan Oligarchs</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Ha</a>
+            <a class="navbar-brand" href="#page-top">Ivan Oligarchs</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -47,8 +47,8 @@
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Hamdan Alkhoori</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">"Leveraging the beauty of mathematics in computer science"</h2>
+                    <h1 class="mx-auto my-0 text-uppercase">Ivan Oligarchs</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Computer Science and Mathematics Student</h2>
                     <a class="btn btn-primary" href="#about">Get Started</a>
                 </div>
             </div>
