--- a/index.html
+++ b/index.html
@@ -61,15 +61,12 @@
                 <div class="col-lg-8">
                     <h2 class="text-white mb-4">About Me</h2>
                     <p class="text-white-50">
-                        As a double major in computer science and mathematics, I am excited to combine my love of
-                        technology with my
-                        passion for problem-solving. With a strong foundation in both fields, I am confident in my
-                        ability to tackle
-                        complex challenges and make a meaningful impact in the tech industry. I am eager to continue
-                        learning and
-                        growing as a student and am committed to using my skills and knowledge to make a positive
-                        difference in the
-                        world.
+                        As a double major in computer science and mathematics, I am excited to combine 
+                        my love of technology with my passion for problem-solving. With a strong
+                        foundation in both fields, I am confident in my ability to tackle complex
+                        challenges and make a meaningful impact in the tech industry. I am eager to
+                        continue learning and growing as a student and am committed to using my skills
+                        and knowledge to make a positive difference in the world.
                     </p>
                 </div>
             </div>
