--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h1>Resume</h1>
                 </div>
                 <div class="col text-end align-middle">
-                    <a class="btn btn-primary" target="_blank" href="./assets/resume.pdf">Download PDF</a>
+                    <a class="btn btn-primary" target="_blank" href="./assets/Resume 2-8.pdf">Download PDF</a>
                 </div>
             </div>
 
