--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             <h2>Education</h2>
             <hr/>
             <div class="row">
-                <div class="col fw-bold">University of California</div>
-                <div class="col text-end">Anticipated graduation: Dec 2025</div>
+                <div class="col fw-bold">The Pennsylvania State University-University Park, PA</div>
+                <div class="col text-end">Anticipated graduation: Dec 2023</div>
             </div>
             <div class="row">
                 <div class="col">College of Engineering-B.S. in Computer Science</div>
-                <div class="col text-end">Cumulative GPA: 3.95/4.00</div>
+                <div class="col text-end">Cumulative GPA: 3.75/4.00</div>
             </div>
             <div class="row">
                 <div class="col">Eberly College of Science-B.S. in Mathematics, System Analysis</div>
@@ -114,7 +114,7 @@
             <h2>Experience</h2>
             <hr/>
             <div class="row">
-                <div class="col fw-bold">Customer Service Executive - Municipality</div>
+                <div class="col fw-bold">Customer Service Executive - Alain Municipality</div>
                 <div class="col text-end">June 2017 - July 2017</div>
             </div>
             <div class="row">
@@ -132,7 +132,7 @@
             <hr/>
             <div class="row">
                 <div class="col fw-bold">Wildlife Conservation Using Drones to Track Wildlife Incidents</div>
-                <div class="col text-end">Fall 2022</div>
+                <div class="col text-end">Penn State | Fall 2022</div>
             </div>
 
             <h2>Skills</h2>
