--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4 mx-auto" />
                             <!-- TODO: Replace with your office address -->
-                            <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                            <div class="small text-black-50">State College, PA</div>
                         </div>
                     </div>
                 </div>
@@ -731,7 +731,7 @@
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4 mx-auto" />
                             <!-- TODO: Replace with your actual email address -->
-                            <div class="small text-black-50"><a href="#!">Ivil1976@gmail.com</a></div>
+                            <div class="small text-black-50"><a href="#!">hza5211@psu.edu</a></div>
                         </div>
                     </div>
                 </div>
@@ -742,7 +742,7 @@
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4 mx-auto" />
                             <!-- TODO: Replace with your actual phone number -->
-                            <div class="small text-black-50">(214)-203-9583</div>
+                            <div class="small text-black-50">(582)-203-9583</div>
                         </div>
                     </div>
                 </div>
