--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h1>Resume</h1>
                 </div>
                 <div class="col text-end align-middle">
-                    <a class="btn btn-primary" target="_blank" href="./assets/Resume 2-8.docx">Download PDF</a>
+                    <a class="btn btn-primary" target="_blank" href="./assets/Resume 2-8.docx">Download</a>
                 </div>
             </div>
 
