--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
             <div class="row">
                 <div class="col fw-bold">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#educ1-details">
-                        University of California
+                        The Pennsylvania State University
                     </a>
                 </div>
-                <div class="col text-end">Anticipated graduation: Dec 2025</div>
+                <div class="col text-end">Anticipated graduation: Dec 2023</div>
             </div>
             <div class="row">
                 <div class="col">College of Engineering-B.S. in Computer Science</div>
-                <div class="col text-end">Cumulative GPA: 3.95/4.00</div>
+                <div class="col text-end">Cumulative GPA: 3.75/4.00</div>
             </div>
 
 
@@ -151,11 +151,9 @@
             <div class="row">
                 <div class="col">
                     <ul>
-                        <li>Relevant Coursework: Data Structure & Algorithms, Computer Organization and Design, Systems
-                            Programming, AI, Computer Vision, Quantum Computation, Database Management Systems,
-                            Programming Languages Concepts, Operating Systems, Object Oriented Programming, Discrete
-                            Mathematics, Numerical Analysis, Linear Programs, Linear Algebra, Theory of Games, Real
-                            Analysis, Blockchain, Probability Theory</li>
+                        <li>Relevant Coursework: Data Structure & Algorithms, Computer Organization and Design, Systems Programming, AI, Computer Vision, Quantum Computation, 
+                            Database Management Systems, Programming Languages Concepts, Operating Systems, Object Oriented Programming, Discrete Mathematics, Numerical Analysis, 
+                            Linear Programs, Linear Algebra, Theory of Games, Real Analysis, Blockchain, Probability Theory, Mathematical Statistics</li>
                     </ul>
                 </div>
             </div>
@@ -167,9 +165,9 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">
+                            <h5 class="modal-title text-black">
                                 <!-- TODO: Input the title of the pop-up -->
-                                University of California
+                                The Pennsylvania State University—University Park, PA
                             </h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
@@ -182,7 +180,7 @@
                             <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                             -->
                             <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-                            <ul class="text-start text-black-50 mb-0">
+                            <ul class="text-start text-black mb-0">
                                 <li>College of Engineering-B.S. in Computer Science</li>
                                 <li>Relevant Coursework: Data Structure & Algorithms, Computer Organization and Design,
                                     Systems
@@ -233,12 +231,12 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Customer Service Executive - Municipality</h5>
+                            <h5 class="modal-title text-black">Customer Service Executive - Municipality</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <img src="assets/img/demo-image-02.jpg" class="img-thumbnail" />
-                            <ul class="text-start text-black-50 mb-0">
+                            <ul class="text-start text-black mb-0">
                                 <li>June 2017 - July 2017</li>
                                 <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
                                     contracts,
@@ -273,12 +271,12 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Wildlife Conservation Using Drones to Track Wildlife Incidents</h5>
+                            <h5 class="modal-title text-black">Wildlife Conservation Using Drones to Track Wildlife Incidents</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <img src="assets/img/demo-image-02.jpg" class="img-thumbnail" />
-                            <ul class="text-start text-black-50 mb-0">
+                            <ul class="text-start text-black mb-0">
                                 <li>Fall 2022</li>
                             </ul>
                         </div>
@@ -702,8 +700,8 @@
         </div>
     </section>
     <!-- Portfolio terminal -->
-    <section class="portfolio-section bg-light" id="portfolio">
-        <div class="terminal vh-100 container px-4 px-lg-5" id="terminal-out">
+    <section class="portfolio-section bg-light min-vh-100" id="portfolio">
+        <div class="terminal container px-4 py-2" id="terminal-out">
             <div class="row terminal-bar">
                 <span>Portfolio Terminal</span>
             </div>
@@ -717,7 +715,7 @@
 
             </div>
             <div id="terminal-input">
-                <label for="terminal-input-field">&gt;&gt;</label>
+                <label for="terminal-input-field">&#10140;&nbsp;</label>
                 <input type="text" id="terminal-input-field">
             </div>
         </div>
@@ -830,7 +828,7 @@
     </section>
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Hamdan Alkhoori 2022</div>
+        <div class="container px-4 px-lg-5">Copyright &copy; Ivan Oligarchs 2022</div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
