--- a/index.html
+++ b/index.html
@@ -204,6 +204,102 @@
             <div class="row">
                 <div class="col fw-bold">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#exp1-details">
+                        Policy Administration-UAE Embassy
+                        <!-- TODO: Update the title of the experience -->
+                    </a>
+                </div>
+                <div class="col text-end">
+                    July 2023 – August 2023
+                    <!-- TODO: Specify the duration of the experience -->
+                </div>
+            </div>
+            <!-- TODO: Second row contains the additional details of the experience -->
+            <div class="row">
+                <div class="col">
+                    <!-- TODO: Specify the key items of the experience as an unordered list (ul) -->
+                    <ul>
+                        <li>Gained knowledge and insights on the politics and economics of Costa Rica and South America</li>
+                        <li>Consolidated skills in writing analytical reports, briefs and research </li>
+                        <li>Acquired proficiency in delivering speeches and presentations at various events and occasions</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Experience Additional Details -->
+            <div id="exp1-details" class="modal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title text-black">Customer Service Executive - Municipality</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <img src="assets/img/demo-image-02.jpg" class="img-thumbnail" />
+                            <ul class="text-start text-black mb-0">
+                                <li>June 2017 - July 2017</li>
+                                <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
+                                    contracts,
+                                    certifications</li>
+                                <li>Contributed to increasing customer satisfaction at 93%</li>
+                                <li>Assisting customers with filling out forms and completing paperwork</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- TODO: Add a new experience based on resume -->
+            <!-- TODO: First row is the title and duration -->
+            <div class="row">
+                <div class="col fw-bold">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exp1-details">
+                        Tadbeer Agency-A Private Recruitment Agency Licenses for Domestic Workers
+                        <!-- TODO: Update the title of the experience -->
+                    </a>
+                </div>
+                <div class="col text-end">
+                    May 2022 - Current
+                    <!-- TODO: Specify the duration of the experience -->
+                </div>
+            </div>
+            <!-- TODO: Second row contains the additional details of the experience -->
+            <div class="row">
+                <div class="col">
+                    <!-- TODO: Specify the key items of the experience as an unordered list (ul) -->
+                    <ul>
+                        <li>Worked directly with vendors to cut infrastructure costs by 40% while keeping specifications high</li>
+                        <li>Installed desktop computers, server, networks, safety systems and Q-Matic system</li>
+                        <li>Implemented a channel for service provision such as a website, call center and a recruitment platform</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Experience Additional Details -->
+            <div id="exp1-details" class="modal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title text-black">Customer Service Executive - Municipality</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <img src="assets/img/demo-image-02.jpg" class="img-thumbnail" />
+                            <ul class="text-start text-black mb-0">
+                                <li>June 2017 - July 2017</li>
+                                <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
+                                    contracts,
+                                    certifications</li>
+                                <li>Contributed to increasing customer satisfaction at 93%</li>
+                                <li>Assisting customers with filling out forms and completing paperwork</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- TODO: Add a new experience based on resume -->
+            <!-- TODO: First row is the title and duration -->
+            <div class="row">
+                <div class="col fw-bold">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exp1-details">
                         Customer Service Executive - Municipality
                         <!-- TODO: Update the title of the experience -->
                     </a>
