--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     <h2 class="text-white mb-4">About Me</h2>
                     <p class="text-white-50 text-center">
                         <!-- TODO: Add About Me paragraph here -->
-                        As a prospective student for the BS in Artificial Intelligence and Mathematics program, I am
-                        highly interested in three specific areas: Artificial Intelligence (AI), quantum computing, and
+                        As a current student pursuing a double major in computer science and mathematics, I am
+                        highly interested in three specific areas: artificial intelligence (AI), quantum computing, and
                         game theories. My skills and academic background in computer science and mathematics have
                         prepared me to excel in these areas and make meaningful contributions to the field.
                         <br><br>
@@ -196,7 +196,7 @@
                 </div>
             </div>
 
-            <h2>Experience</h2>
+            <h2>Experiences</h2>
             <hr />
 
             <!-- TODO: Add a new experience based on resume -->
