--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-4">
-                    <img class="img-about" src="assets/img/portfolio.png" alt="...">
+                    <img class="img-about" src="assets/img/headshot.JPG" alt="...">
                 </div>
                 <div class="col-lg-8">
                     <h2 class="text-white mb-4">About Me</h2>
