--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
     </section>
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Ivan Oligarchs 2022</div>
+        <div class="container px-4 px-lg-5">Copyright &copy; Hamdan Alkhoori 2022</div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
