--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col fw-bold">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#educ1-details">
-                        The Pennsylvania State University
+                        The Pennsylvania State University—University Park, PA
                     </a>
                 </div>
                 <div class="col text-end">Anticipated graduation: Dec 2023</div>
@@ -167,7 +167,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title text-black">
                                 <!-- TODO: Input the title of the pop-up -->
-                                The Pennsylvania State University—University Park, PA
+                                The Pennsylvania State University
                             </h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
@@ -179,7 +179,7 @@
                             <!-- Sample Video (from Youtube:)
                             <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                             -->
-                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/R81NaRZISTU"></iframe>
                             <ul class="text-start text-black mb-0">
                                 <li>College of Engineering-B.S. in Computer Science</li>
                                 <li>Relevant Coursework: Data Structure & Algorithms, Computer Organization and Design,
@@ -209,7 +209,7 @@
                     </a>
                 </div>
                 <div class="col text-end">
-                    July 2023 – August 2023
+                  Costa Rica | July 2023 – August 2023
                     <!-- TODO: Specify the duration of the experience -->
                 </div>
             </div>
@@ -257,7 +257,7 @@
                     </a>
                 </div>
                 <div class="col text-end">
-                    May 2022 - Current
+                  Al Ain | May 2022 - Current
                     <!-- TODO: Specify the duration of the experience -->
                 </div>
             </div>
@@ -305,7 +305,7 @@
                     </a>
                 </div>
                 <div class="col text-end">
-                    June 2017 - July 2017
+                  Al Ain | June 2017 - July 2017
                     <!-- TODO: Specify the duration of the experience -->
                 </div>
             </div>
@@ -353,7 +353,7 @@
                         Wildlife Conservation Using Drones to Track Wildlife Incidents
                     </a>
                 </div>
-                <div class="col text-end">Fall 2022</div>
+                <div class="col text-end">Penn State | Fall 2022</div>
             </div>
             <div class="row">
                 <div class="col">
