--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             -->
                             <iframe width="100%" height="315" src="https://www.youtube.com/embed/R81NaRZISTU"></iframe>
                             <ul class="text-start text-black mb-0">
-                                <li>College of Engineering-B.S. in Computer Science</li>
+                                <!-- <li>College of Engineering-B.S. in Computer Science</li>
                                 <li>Relevant Coursework: Data Structure & Algorithms, Computer Organization and Design,
                                     Systems
                                     Programming, AI, Computer Vision, Quantum Computation, Database Management Systems,
@@ -189,7 +189,7 @@
                                     Discrete
                                     Mathematics, Numerical Analysis, Linear Programs, Linear Algebra, Theory of Games,
                                     Real
-                                    Analysis, Blockchain, Probability Theory</li>
+                                    Analysis, Blockchain, Probability Theory</li> -->
                             </ul>
                         </div>
                     </div>
