--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <img src="assets/img/demo-image-02.jpg" class="img-thumbnail" />
+                            <img src="assets/img/DMT-AlainCITY-H.png" class="img-thumbnail" />
                             <ul class="text-start text-black mb-0">
                                 <li>June 2017 - July 2017</li>
                                 <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
