--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <img src="assets/img/demo-image-02.jpg" class="img-thumbnail" />
+                            <img src="assets/img/DMT-AlainCITY-H.png" class="img-thumbnail" />
                             <ul class="text-start text-black mb-0">
                                 <li>June 2017 - July 2017</li>
                                 <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
@@ -333,12 +333,12 @@
                         <div class="modal-body">
                             <img src="assets/img/DMT-AlainCITY-H.png" class="img-thumbnail" />
                             <ul class="text-start text-black mb-0">
-                                <li>June 2017 - July 2017</li>
+                             <!--   <li>June 2017 - July 2017</li>
                                 <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
                                     contracts,
                                     certifications</li>
                                 <li>Contributed to increasing customer satisfaction at 93%</li>
-                                <li>Assisting customers with filling out forms and completing paperwork</li>
+                                <li>Assisting customers with filling out forms and completing paperwork</li> -->
                             </ul>
                         </div>
                     </div>
