--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
             <!-- TODO: First row is the title and duration -->
             <div class="row">
                 <div class="col fw-bold">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#exp1-details">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exp3-details">
                         Policy Administration-UAE Embassy
                         <!-- TODO: Update the title of the experience -->
                     </a>
                 </div>
                 <div class="col text-end">
-                  Costa Rica | July 2023 – August 2023
+                  Costa Rica | July 2023 - August 2023
                     <!-- TODO: Specify the duration of the experience -->
                 </div>
             </div>
@@ -226,15 +226,15 @@
             </div>
 
             <!-- Experience Additional Details -->
-            <div id="exp1-details" class="modal" tabindex="-1">
+            <div id="exp3-details" class="modal" tabindex="-3">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title text-black">Customer Service Executive - Municipality</h5>
+                            <h5 class="modal-title text-black">Policy Administration-UAE Embassy</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <img src="assets/img/DMT-AlainCITY-H.png" class="img-thumbnail" />
+                            <img src="assets/img/ipad.png" class="img-thumbnail" />
                             <ul class="text-start text-black mb-0">
                                 <li>June 2017 - July 2017</li>
                                 <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
@@ -251,7 +251,7 @@
             <!-- TODO: First row is the title and duration -->
             <div class="row">
                 <div class="col fw-bold">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#exp1-details">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#exp2-details">
                         Tadbeer Agency-A Private Recruitment Agency Licenses for Domestic Workers
                         <!-- TODO: Update the title of the experience -->
                     </a>
@@ -274,11 +274,11 @@
             </div>
 
             <!-- Experience Additional Details -->
-            <div id="exp1-details" class="modal" tabindex="-1">
+            <div id="exp2-details" class="modal" tabindex="-2">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title text-black">Customer Service Executive - Municipality</h5>
+                            <h5 class="modal-title text-black">Tadbeer Agency-A Private Recruitment Agency Licenses for Domestic Workers</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -332,14 +332,14 @@
                         </div>
                         <div class="modal-body">
                             <img src="assets/img/DMT-AlainCITY-H.png" class="img-thumbnail" />
-                            <ul class="text-start text-black mb-0">
-                             <!--   <li>June 2017 - July 2017</li>
+                           <!-- <ul class="text-start text-black mb-0">
+                                <li>June 2017 - July 2017</li>
                                 <li>Completed 6,000 transactions covering permits, leases, licenses, projects, plots,
                                     contracts,
                                     certifications</li>
                                 <li>Contributed to increasing customer satisfaction at 93%</li>
-                                <li>Assisting customers with filling out forms and completing paperwork</li> -->
-                            </ul>
+                                <li>Assisting customers with filling out forms and completing paperwork</li>
+                            </ul> -->
                         </div>
                     </div>
                 </div>
